# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added the library rpcap and the scripts rpcap-brute and rpcap-info
  which perform brute force password guessing and extract information from the
  WinPcap Remote Packet Capture daemon. [Patrik]

o [NSE] Added authentication support to MongoDB library and modified existing
  scripts to support it. Added the script mongodb-brute to perform password
  brute force guessing. [Patrik]

o Added a --nsock-engine option to nmap, nping and ncat to enforce use of a
  given nsock IO engine. [Henri]

o [NSE] Added support to broadcast-listener for extracting address, native vlan
  and management IP address from CDP packets. [Tom]
	
o [NSE] Added the script broadcast-networker-discover that discoverer EMC
  Networker servers on the LAN. [Patrik]

o [NSE] Added RPC Call CALLIT to the RPC library and modified UDP sockets to be
  unconnected in order to support broadcast. [Patrik]

o Integrated latest IPv6 OS submissions and corrections.

o [NSE] Added a sslcert library that gets and caches SSL certificates in the
  registry. Modified the scripts ssl-cert and ssl-google-cert-catalog to take
  advantage of this change. [Patrik]

o [NSE] Added host based registry, which allows scripts to share data between
  scripts scanning a specific host. [Patrik]

o [NSE] Applied patch from Andrew Orr that fixes the recent changes in the
  BitCoin protocol. [Patrik]

o [NSE] Added a Network Data Management Protocol (ndmp) library and the
  scripts:
  + ndmp-version - retrieves version information
  + ndmp-fs-info - retrieves information about remote filesystems
  [Patrik]

o [NSE] Added the script http-vuln-cve2010-2861 to detect the Cold Fusion
  CVE-2010-2861 directory traversal vulnerability. [Micah Hoffman]

o [NSE] Added support for edns-client-subnet requests to the DNS library and
  the script dns-client-subnet-scan that scans for addresses resolved from
  different subnets. [John Bond]
